[package]
name = "near-lake-accounts-watcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
base64 = "0.11"
clap = { version = "3.0.0-beta.5", features = ["color", "derive", "env"] }
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
near-lake-framework = "0.2.0"
